<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".profile.ProfileFragment">

    <ImageView
        android:id="@+id/avatar_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:contentDescription="@string/avatar_content_description"
        android:maxHeight="192dp"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/ic_avatar_96"
        tools:src="@drawable/large_drawable"
        tools:ignore="RedundantDescriptionCheck"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/update_avatar_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:strokeColor="@color/grey"
        android:backgroundTint="@color/grey"
        android:textColor="@color/white"
        app:cornerRadius="4dp"
        android:text="@string/update_avatar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        style="@style/CustomTextViewHeader"
        android:text="@string/name_profile" />

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/name_profile_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        style="@style/CustomTextViewHeader"
        android:text="@string/email" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/save_profile_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/save_profile" />

</LinearLayout>