<resources>
    <string name="app_name">My Pokedex</string>

    <!-- Pokemon Details -->

    <string name="name">Name: %s</string>
    <string name="base_experience">Base Experience: %s</string>
    <string name="height">Height: %s</string>
    <string name="id">ID: %d</string>
    <string name="is_default">Is Default: %b</string>
    <string name="location_area_encounters">Location Area Encounters: %s</string>
    <string name="order">Order: %s</string>
    <string name="weight">Weight: %s</string>
    <string name="pokemon_details">Pokemon Details</string>

    <!-- Pokemon List Menu -->
    <string name="action_search">search</string>
    <string name="action_change_pokemon_range">Change Pokemon list Range</string>

    <!-- Pokemon List Errors -->
    <string name="incorrect_range">Incorrect Range</string>
    <string name="pokemon_list_lower_limit_error">Incorrect lower range. Minimum on range is 1.</string>
    <string name="pokemon_list_upper_limit_error">Incorrect upper range. Maximum on range is 1279.</string>

    <!-- Pokemon Range Dialog -->
    <string name="change_range_title">Change Pokemon Range</string>
    <string name="to">to</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="range_description">Please change the range of pokemon you would like to see. Range is between 1 to 1279.</string>
    <string name="lower_limit_content_description">Please enter number for lower limit of range for pokemon you would like to see.</string>
    <string name="upper_limit_content_description">Please enter number for upper limit of range for pokemon you would like to see.</string>

    <!-- Profile -->
    <string name="profile">Profile</string>
    <string name="go_to_profile">Go To Profile</string>
    <string name="name_profile">Name</string>
    <string name="name_profile_hint">Enter Name</string>
    <string name="email">Email</string>
    <string name="email_hint">Enter Email</string>
    <string name="avatar_content_description">Picture of avatar. Click on avatar to change it.</string>
    <string name="save_profile">Save Profile</string>
    <string name="profile_updated">Your profile has been updated.</string>

    <!-- avatar -->
    <string name="avatar">Avatar</string>
    <string name="update_avatar">Update Avatar</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="avatar_description">Do you want to update your avatar? Pick one of the options below.</string>
</resources>