<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always"/>

    <item android:id="@+id/action_change_range"
        android:title="@string/action_change_pokemon_range"
        android:icon="@drawable/ic_baseline_height_24"/>

    <item android:id="@+id/action_profile"
        android:title="@string/go_to_profile"/>

</menu>