<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <TextView
        android:id="@+id/text_base_experience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/base_experience" />

    <TextView
        android:id="@+id/text_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height" />

    <TextView
        android:id="@+id/text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id" />

    <TextView
        android:id="@+id/text_is_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_default" />

    <TextView
        android:id="@+id/text_location_area_encounters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_area_encounters" />

    <TextView
        android:id="@+id/text_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order" />

    <TextView
        android:id="@+id/text_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight" />

</LinearLayout>
